2007-10-17  Nick Clifton  <nickc@redhat.com>

	PR gas/5173
	* as.h (ieee_md_atof, vax_md_atof): New prototypes.
	* read.c (s_float_space): Allow a zero length return from md_atof
	if the error message has been set.
	(float_cons): Likewise.
	* config/atof-ieee.c (ieee_md_atof): New function.  Performs the
	md_atof() function in a generic way for IEEE using targets.
	* config/atof-vax.c (md_atof): Rename to vax_md_atof.  Use the
	same error message as ieee_md_atof.
	* tc-alpha.c (md_atof): Use ieee_md_atof.  Remove #define of vax_md_atof.
	* tc-arc.c (md_atof): Use ieee_md_atof.
	* tc-arm.c (md_atof): Use sizeof (LITTLENUM_TYPE) instead of the
	constant 2.  Use a precision of 5 for the 'x' and 'p' types.
	* tc-avr.c (md_atof): Use ieee_md_atof.
	* tc-bfin.c (md_atof): Use ieee_md_atof.
	* tc-cr16.c (md_atof): Use ieee_md_atof.
	* tc-crx.c (md_atof): Use ieee_md_atof.
	* tc-d10v.c (md_atof): Use ieee_md_atof.
	* tc-d30v.c (md_atof): Use ieee_md_atof.
	* tc-dlx.c (md_atof): Use ieee_md_atof.
	* tc-fr30.c (md_atof): Use ieee_md_atof.
	* tc-frv.c (md_atof): Use ieee_md_atof.
	* tc-h8300.c (md_atof): Use ieee_md_atof.
	* tc-hppa.c (md_atof): Use ieee_md_atof.
	* tc-i370.c (md_atof): Use ieee_md_atof.
	(i370_dc): Convert the 'E' type to 'f' before calling md_atof.
	* tc-i386.c (md_atof): Use ieee_md_atof.
	* tc-i860.c (md_atof): Use ieee_md_atof.
	* tc-i960.c (md_atof): Use ieee_md_atof.
	* tc-ia64.c (md_atof): Use the same error message as ieee_md_atof.
	* tc-ip2k.c (md_atof): Use ieee_md_atof.
	* tc-iq2000.c (md_atof): Use ieee_md_atof.
	* tc-m32c.c (md_atof): Use ieee_md_atof.
	* tc-m32r.c (md_atof): Use ieee_md_atof.
	* tc-m68hc11.c (md_atof): Use ieee_md_atof.
	* tc-m68k.c (md_atof): Use ieee_md_atof.
	* tc-maxq.c (md_atof): Use ieee_md_atof.
	* tc-mcore.c (md_atof): Use ieee_md_atof.
	* tc-mep.c (md_atof): Use ieee_md_atof.
	* tc-mips.c (md_atof): Use ieee_md_atof.
	* tc-mmix.c (md_atof): Use ieee_md_atof.
	* tc-mn10200.c (md_atof): Use ieee_md_atof.